syntax = "proto3";

import "google/protobuf/empty.proto";

package user;

option go_package = "./proto";

service UserService {
    rpc GetUsers (GetUsersRequest) returns (GetUsersResponse);
    rpc CreateUser (CreateUserRequest) returns (User);
    rpc UpdateUser (UpdateUserRequest) returns (User);
    rpc DeleteUser (DeleteUserRequest) returns (Empty);
    rpc Watch(google.protobuf.Empty) returns (stream WatchResponse);
  }

message User {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string nickname = 5;
    string country = 6;
    string created_at = 7;
    string updated_at = 8;
  }

  message UserFilter {
    string first_name = 1;
    string last_name = 2;
    string nickname = 3;
    string email = 4;
    string country = 5;
    int64 limit = 6;
    int64 offset = 7;
}

  message GetUsersRequest {
    string id = 1;
    optional UserFilter filter = 2;
  }

  message GetUsersResponse {
    repeated User users = 1;
  }
  
  message CreateUserRequest {
    string first_name = 1;
    string last_name = 2;
    string nickname = 3;
    string email = 4;
    string country = 5;
    string password = 6;
  }
  
  message UpdateUserRequest {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string nickname = 4;
    string email = 5;
    string country = 6;
    string password = 7;
  }
  
  message DeleteUserRequest {
    string id = 1;
  }
  
  message Empty {}

  message WatchResponse {
    string changeType = 1;
    string userId = 2;
  }